processed/jira/txt/LU/LU-13581.txt
Key:        LU-13581
Summary:    LU-9859 libcfs: add support for Xarray breaks build on 3.10.0-1062.9.1.el7.x86_64.debug
Link:       https://jira.whamcloud.com/browse/LU-13581
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   John Hammond
Created:    Mon, 18 May 2020 15:09:08 +0000
Updated:    Thu, 4 Feb 2021 09:14:17 +0000
Resolved:   Sun, 5 Jul 2020 14:12:45 +0000

--- Description ---
When lockdep is enabled, the Xarray header cannot be compiled due to const qualification errors:

  CC [M]  /root/lustre-release/libcfs/libcfs/linux/xarray.o
In file included from /root/lustre-release/libcfs/libcfs/linux/xarray.c:19:0:
/root/lustre-release/libcfs/include/libcfs/linux/xarray.h: In function ‘xa_head’:
/root/lustre-release/libcfs/include/libcfs/linux/xarray.h:1135:2: error: passing argument 1 of ‘lock_is_held’ discards ‘const’ qualifier from pointer target type [-Werror]
  return rcu_dereference_check(xa->xa_head,
  ^
In file included from include/linux/spinlock_types.h:18:0,
                 from include/linux/spinlock.h:81,
                 from include/linux/mmzone.h:7,
                 from include/linux/gfp.h:5,
                 from include/linux/slab.h:12,
                 from /root/lustre-release/libcfs/libcfs/linux/xarray.c:17:
include/linux/lockdep.h:340:19: note: expected ‘struct lockdep_map *’ but argument is of type ‘const struct lockdep_map *’
 static inline int lock_is_held(struct lockdep_map *lock)
                   ^

--- Comment (pjones, Sun, 5 Jul 2020 14:12:45 +0000) ---
Landed for 2.14

--- Comment (gerrit, Sun, 5 Jul 2020 00:18:08 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/39150/

Subject: LU-13581 build: xarray and lockdep_is_held const clash

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 3fcceea0e301c51a29d641c287bd36302a706bbe

--- Comment (gerrit, Tue, 23 Jun 2020 10:10:49 +0000) ---
Shaun Tancheff (shaun.tancheff@hpe.com) uploaded a new patch: https://review.whamcloud.com/39150

Subject: LU-13581 build: xarray and lockdep_is_held const clash

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 1902c60cf81363fb6635f4f5729d0874581e1b75

--- Comment (gerrit, Fri, 22 May 2020 01:10:40 +0000) ---
James Simmons (jsimmons@infradead.org) uploaded a new patch: https://review.whamcloud.com/38696

Subject: LU-13581 libcfs: fixup Xarray support

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: afc399c9aa540928f755fb8a21455c51bb7bf353

--- Comment (jhammond, Wed, 20 May 2020 13:07:55 +0000) ---
The signature of the lockdep functions changed sometime between 3.10 and 5.2. See https://elixir.bootlin.com/linux/v5.2-rc2/source/include/linux/lockdep.h#L354

--- Comment (simmonsja, Tue, 19 May 2020 23:15:56 +0000) ---
Strange this doesn't show up in the linux kernel since it was taken from it.
